--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 <input type="text" name="app1" class="txt2" value="1)"><br>
 <input type="text" name="app2" class="txt2" value="2)"><br>
 <input type="text" name="app3" class="txt2" value="3)"><br>
-    
-<input type="button" value="Post a appreciate"
+<br><input type="button" value="Post a appreciate"
 onclick="Jump();" class="button">
 </form>
 
