--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <!---- フォーム ---->
 <form name="myForm">
-[Today I appreciate]<br>
+<img src="/logo.png">[Today I appreciate]<br>
 <input type="text" name="app1" class="txt2" value="1)"><br>
 <input type="text" name="app2" class="txt2" value="2)"><br>
 <input type="text" name="app3" class="txt2" value="3)"><br>
