--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
 .button:hover {
     opacity : 1;
 }
+img.example3 {
+    vertical-align: middle;
+}
 </style>
 
 <!---- フォーム ---->
 <form name="myForm">
-<img src="/logo.png" width="50" height="50">appreciation
+<img src="/logo.png" width="50" height="50" class="example3">appreciation
 <br><hr colmr="#f2f2f2">
 <br>
 <input type="text" name="app1" class="txt2" value="1)"><br>
