--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     display: inline-block;
     width: 100%;
     /*コレ*/padding: 1em 0.5em;
-    /*コレ*/line-height: 1;
+    /*コレ*/line-height: 2;
     border: 1px solid #999;
     box-sizing: border-box;
     background: #f3f3f3;
@@ -43,12 +43,18 @@ img.example3 {
 
 <!---- フォーム ---->
 <form name="myForm">
-<img src="/logo.png" width="40" height="40" class="example3"> appreciation
+<img src="/logo.png" width="40" height="40" class="example3"><b> appreciation</b>
 <br><hr colmr="#f2f2f2">
 <br>
-<input type="text" name="app1" class="txt2" value="1)"><br>
-<input type="text" name="app2" class="txt2" value="2)"><br>
-<input type="text" name="app3" class="txt2" value="3)"><br>
+<b>1st appreciate</b>
+<input type="text" name="app1" class="txt2" placeholder="things you are appreciate for"><br>
+<input type="text" name="rea1" class="txt2" placeholder="why is that?"><br>
+<br><b>2nd appreciate</b>
+<input type="text" name="app2" class="txt2" placeholder="things you are appreciate for"><br>
+<input type="text" name="rea2" class="txt2" placeholder="why is that?"><br>
+<br><b>3rd appreciate</b>
+<input type="text" name="app3" class="txt2" placeholder="things you are appreciate for"><br>
+<input type="text" name="rea3" class="txt2" placeholder="why is that?"><br>
 <br><input type="button" value="Post a appreciate"
 onclick="Jump();" class="button">
 </form>
@@ -59,13 +65,8 @@ onclick="Jump();" class="button">
 function Jump(){
 // テキストを取得して URL を組み立てる
 var myURL =
-"https://warpcast.com/~/compose?text=" +
-"Today I appreciate:%0D%0A%0D%0A" +
-document.myForm.app1.value +
-"%0D%0A%0D%0A" +
-document.myForm.app2.value +
-"%0D%0A%0D%0A" +
-document.myForm.app3.value;
+"https://warpcast.com/~/compose?text=" + "Today I appreciate:%0D%0A%0D%0A1)" + document.myForm.app1.value + "+" + document.myForm.rea1.value + "%0D%0A%0D%0A2)" + document.myForm.app2.value +  "+" + document.myForm.rea2.value + "%0D%0A%0D%0A3)" +
+document.myForm.app3.value +  "+" + document.myForm.rea3.value;
 // ページを移動
 location.href = myURL;
 return;
