--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
     font-size : 12pt;
     text-align : center;
     cursor : pointer;
-    padding : 13px 13px;
+    padding : 12px 12px;
     background : #855dcd;
     color : #ffffff;
     line-height : 0.5em;
     opacity : 1;
     transition : .3s;
+    font-weight: bold;
 }
 .button:hover {
     opacity : 1;
