--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function Jump(){
 // テキストを取得して URL を組み立てる
 var myURL =
 "https://warpcast.com/~/compose?text=" + "Today I appreciate:%0D%0A%0D%0A1)" + document.myForm.app1.value + "+" + document.myForm.rea1.value + "%0D%0A%0D%0A2)" + document.myForm.app2.value +  "+" + document.myForm.rea2.value + "%0D%0A%0D%0A3)" +
-document.myForm.app3.value +  "+" + document.myForm.rea3.value&channelKey=appciation;
+document.myForm.app3.value +  "+" + document.myForm.rea3.value + "&channelKey=appreciation";
 // ページを移動
 location.href = myURL;
 return;
