--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>appreciation</title>
-<link rel=”icon” href=”/logo.png” sizes=”180×180″>
+<link rel=”apple-touch-icon” href=”/logo.png” sizes=”180×180″>
 </head>
 
 <body>
